added 3 project pages + new logo and images

--- a/_posts/2023-02-12-goplayoz.md
+++ b/_posts/2023-02-12-goplayoz.md
@@ -3,8 +3,11 @@ layout: post
 title:  "GoPlayOz (completed)"
 author: raymond
 categories: [ non-commercial ]
-image: assets/images/1.jpg
+image: assets/images/goplayoz.png
+featured: true
+comments: false
+
 ---
 'GoPlayOz' was the final project for my app development course. We created an application that allows users to post the location of any local sports venue. It was created out of the desire to have a stronger database of public venues for athletes to use. 
 
-My contributions: GoPlayOz was developed in Android Studio using Java. Google Firebase was used host the 'venues' database. 
+My contributions: This app was developed using Android Studio with Java. I set up and provided a structure for the 'venues' database, hosted remotely  using Google Firebase. I also heavily contributed to the frontend side of development, working on the search functionality using geospatial data, and adding visual polish to the UI so it would be appealing to users. 
